--- a/src/main/webapp/resources/label_en.properties
+++ b/src/main/webapp/resources/label_en.properties
@@ -57,7 +57,7 @@ saved=Changes saved
 no_orders=You have no orders
 archived=Order sent to archive
 canceled=Order canceled
-\u0441hanged=Changed successfully
+changed=Changed successfully
 incorrect=Incorrect login or password
 brend_added=New car brend added
 incorr_numb=Incorrect order number
@@ -65,3 +65,6 @@ user_not=User not added, something goes wrong
 order_not=Order not added, something goes wrong
 car_not=Car not added, something goes wrong
 model_exists=Car model already exists
+DISPATCHER=Dispatcher
+ADMIN=Administrator
+DRIVER=Driver
